--- a/AMCO/contact.html
+++ b/AMCO/contact.html
@@ -202,7 +202,7 @@
         <div class="col-12 pt-1">
           <div class="contact">
             <span>Retrouvez-nous sur :</span>
-            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png" alt="" width="16" height="16">
+            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png" alt="FB_AMCO" width="16" height="16">
             </a> 
           </div>
         </div>
