--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="0oimqZ7089TB2KD2jknDuvTkNG3NEkQYr-h1fG0uHvE" />
-  <meta name="description" content="Bienvenue sur la page d'accueil du site de Motocross Ariégeois, l'A.M.C.O (l'Amicale Motos Cyclos Occitanie). Vous y retrouverez les différentes informations relative au club. l'A.M.C.O est une association de Motocross et Vélo basée dans l'Ariège."/>
+  <meta name="description" content="Bienvenue sur la page d'accueil du site de Motocross Ariégeois, l'A.M.C.O (l'Amicale Motos Cyclos Occitanie). l'A.M.C.O est une association de Motocross et Vélo basée dans l'Ariège."/>
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">  
 
+  
   <link rel="stylesheet" href="/Style/style.css">
   <title>Amicale Motos Cyclos Occitanie</title>
 </head>
@@ -83,14 +84,6 @@
                 </svg> Accueil
               </a>
             </li>
-            <!--<li class="nav-item">
-              <a class="nav-link" href="/AMCO/evenement.html"> 
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewbox="0 0 16 16">
-                  <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
-                  <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                </svg> Evènements
-              </a>
-            </li>-->
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/AMCO/club.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewbox="0 0 16 16">
@@ -124,13 +117,13 @@
           <div class="container pt-2 text-center">
             <div class="row">
               <div class="col">
-                <a href="https://www.ufolep.org/" target="blank"><img src="/Annexe/Images/Affiliation/ufolep.png" alt="" width="130" height="60"></a> 
+                <a href="https://www.ufolep.org/" target="blank"><img src="/Annexe/Images/Affiliation/ufolep.png" alt="Ufuolep" width="130" height="60"></a> 
               </div>
               <div class="col">  
-                <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg" alt="" width="130" height="60"></a> 
+                <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg" alt="FFM" width="130" height="60"></a> 
               </div>
               <div class="col">
-                <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg" alt="" width="130" height="60"></a> 
+                <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg" alt="Ligue_moto_occitanie" width="130" height="60"></a> 
               </div>
             </div>
           </div>
@@ -139,7 +132,7 @@
     </div> 
     <main>
       <div class="accueil mt-4">
-        <h1>Accueil</h1>
+        <h1>Accueil de l'AMCO</h1>
         <div class="wrapper mx-1 ">
           <article>
             <!--article happy new year-->
@@ -150,6 +143,37 @@
                     <h2 class="card-header">Site officiel de l'Amicale Moto Cyclo Occitanie  <br> F.F.M </h2>
                     <div class="card-body">
                       <p class="card-text text-center">Les membres de l'équipe vous souhaitent une excellente année 2022 </p>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+            <!--Assemblée Générale 2022-->
+            <div class="row">
+              <div class="col">
+                <section class="AG_2022">
+                  <div class="card">
+                    <h2 class="card-header text-danger">Assemblée Générale 2022</h2>
+                    <div class="card-body">
+                     
+                      <p class="card-text" id="ag_date">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-calendar-date" viewbox="0 0 16 16">
+                        <path d="M6.445 11.688V6.354h-.633A12.6 12.6 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61h.675zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82h-.684zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23z"/>
+                        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+                        </svg><strong> <u> le 16 Décembre à 20H</u></strong>
+                      </p>
+                      <p class="card-text">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-geo-alt-fill" viewbox="0 0 16 16"><path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                        </svg> Le lieu vous sera communiqué par mails, sms ou Facebook
+                      </p>
+                      <p class="card-text text-center">Ordre du jour :
+                        <ul class="mb-2 text-uppercase">
+                          <li>Rapport moral 2021/2022</li>
+                          <li>Rapport financier</li>
+                          <li>Etat des lieux des projets en cours</li>
+                          <li>Questions diverses</li>
+                        </ul>
+                      </p>
                     </div>
                   </div>
                 </section>
