--- a/index.html
+++ b/index.html
@@ -155,25 +155,26 @@
                   <div class="card">
                     <h2 class="card-header text-danger">Assemblée Générale 2022</h2>
                     <div class="card-body">
-                     
                       <p class="card-text" id="ag_date">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-calendar-date" viewbox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-calendar-date" viewbox="0 0 16 16">
                         <path d="M6.445 11.688V6.354h-.633A12.6 12.6 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61h.675zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82h-.684zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23z"/>
                         <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
                         </svg><strong> <u> le 16 Décembre à 20H</u></strong>
                       </p>
                       <p class="card-text">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-geo-alt-fill" viewbox="0 0 16 16"><path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-geo-alt-fill" viewbox="0 0 16 16"><path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
                         </svg> Le lieu vous sera communiqué par mails, sms ou Facebook
                       </p>
-                      <p class="card-text text-center">Ordre du jour :
-                        <ul class="mb-2 text-uppercase">
+                      <p class="card-text text-center" id="OrdreDuJour">Ordre du jour :
+                        <ul class="mb-2">
                           <li>Rapport moral 2021/2022</li>
                           <li>Rapport financier</li>
                           <li>Etat des lieux des projets en cours</li>
                           <li>Questions diverses</li>
                         </ul>
                       </p>
+                    </div>
+                    <div class="card-footer text-danger"><strong> Veuillez confirmer votre présence par mail ou SMS !!</strong>
                     </div>
                   </div>
                 </section>
